avoid scrollbars when possible

--- a/src/app/help/help/help.component.scss
+++ b/src/app/help/help/help.component.scss
@@ -2,8 +2,11 @@
     display: grid;
     grid-template-columns: 1fr 6fr 1fr;
     grid-template-rows: 100%;
-    margin-top: 24px;
     height: 100vh;
+}
+
+.pad {
+    padding: 16px;
 }
 
 .content-grid {
